--- a/week_1/CSS/style.css
+++ b/week_1/CSS/style.css
@@ -6,3 +6,10 @@ p{
     color: coral;
     font-family: fantasy;
 }
+
+ul {
+    list-style-type: circle;
+}
+ol{
+    list-style-type: upper-roman;
+}
