--- a/week_1/CSS/style.css
+++ b/week_1/CSS/style.css
@@ -1,6 +1,6 @@
 h1{
     color: green;
-    font-famil: sans-serif;
+    font-family: sans-serif;
 }
 p{
     color: coral;
@@ -8,7 +8,7 @@ p{
 }
 
 ul {
-    list-style-type: circle;
+    list-style-image: url('../Images/pointer-icon.png');
 }
 ol{
     list-style-type: upper-roman;
