--- a/week_1/CSS/style.css
+++ b/week_1/CSS/style.css
@@ -13,3 +13,14 @@ ul {
 ol{
     list-style-type: upper-roman;
 }
+
+a{
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    background-color: aquamarine;
+    padding: 5px;
+}
+a:hover{
+    background-color: aqua;
+    color: #ffff;
+}
