Adding an image to the bullet list

--- a/week_2/CSS/Style.css
+++ b/week_2/CSS/Style.css
@@ -12,7 +12,7 @@ p{
 }
 
 ul {
-    list-style-type: circles;
+    list-style-image: url('../Images/pointer-icon.png');
 }
 ol {
     list-style-type: upper-roman;
