--- a/week_2/CSS/Style.css
+++ b/week_2/CSS/Style.css
@@ -17,3 +17,14 @@ ul {
 ol {
     list-style-type: upper-roman;
 }
+
+a{
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    background-color: aquamarine;
+    padding: 5px;
+}
+a:hover{
+    background-color: aqua;
+    color: #ffffff;
+}
