--- a/week_2/CSS/Style.css
+++ b/week_2/CSS/Style.css
@@ -18,13 +18,13 @@ ol {
     list-style-type: upper-roman;
 }
 
-a{
+#menu-bar a{
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     background-color: aquamarine;
     padding: 5px;
 }
-a:hover{
+#menu-bar a:hover{
     background-color: aqua;
     color: #ffffff;
 }
