--- a/week_2/Superhero-app/CSS/style.css
+++ b/week_2/Superhero-app/CSS/style.css
@@ -1,3 +1,14 @@
 .gallery img{
 	width: 100%;
 }
+
+h2{
+	font-family: Impact, fantasy;
+	font-size: 20px;
+	font-style: italic;
+	color: cornflowerblue;
+}
+
+p{
+	font-family: Helvetica, sans-serif;
+}
