--- a/week_2/Superhero-app/CSS/style.css
+++ b/week_2/Superhero-app/CSS/style.css
@@ -22,22 +22,20 @@ p{
 }
 
 #menu{
-	width: 100%;
-	height: 40px;
-	background-color: cornflowerblue;
-	padding-top: 12px;
+width:100%;
+height:40px;
+background-color: cornflowerblue;
+padding-top: 12px;
 }
-
 #menu a{
-	color: #ffff;
-	font-family:  Helvetica, sans-serif;
-	font-size: 18px;
-	text-decoration: none;
-	font-weight: 800;
-	padding-left: 20px;
-	padding-right: 20px;
+color:#ffffff;
+font-family: Helvetica, sans-serif;
+font-size: 18px;
+text-decoration:none;
+font-weight: 800px;
+padding-left: 20px;
+padding-right: 20px;
 }
-
 #menu a:hover{
-	color: #5077bd;
+color: #5077bd;
 }
