--- a/week_3/Pine City Zoo/CSS/Style.css
+++ b/week_3/Pine City Zoo/CSS/Style.css
@@ -1,23 +1,23 @@
-body{
+body {
     padding: 0;
     margin: 0;
     font-family: Helvetica;
 }
 
-#header{
+#header {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 500%;
+    z-index: 500;
     width: 100%;
     height: 80px;
     background-image: url('../Images/wood-bg.png');
     background-repeat: repeat-x;
 }
-#header img{
+
+#header img {
     display: block;
     margin: auto;
     height: 70%;
     padding-top: 15px;
 }
-
