--- a/week_3/Pine City Zoo/CSS/Style.css
+++ b/week_3/Pine City Zoo/CSS/Style.css
@@ -1,27 +1,26 @@
-body {
-    padding: 0;
-    margin: 0;
-    font-family: Helvetica;
+body{
+padding    : 0;
+margin     : 0;
+font-family: Helvetica;
 }
 
-/*=========== HEADER ========*/
+/*======== HEADER ========*/
 
-#header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 500;
-    width: 100%;
-    height: 80px;
-    background-image: url('../Images/wood-bg.png');
-    background-repeat: repeat-x;
+#header{
+position: fixed;
+top     : 0;
+left    : 0;
+z-index : 500;
+width   :100%;
+height  :80px;
+background-image  : url('images/wood-bg.png');
+background-repeat: repeat-x;
 }
-
-#header img {
-    display: block;
-    margin: auto;
-    height: 70%;
-    padding-top: 15px;
+#header img{
+display: block;
+margin : auto;
+height : 70%;
+padding-top: 15px;
 }
 
 /*============== TOP-TABS ==========*/
