Styling the main tab of the image

--- a/week_3/Pine City Zoo/CSS/Style.css
+++ b/week_3/Pine City Zoo/CSS/Style.css
@@ -45,3 +45,8 @@ padding-top: 15px;
     text-decoration: none;
     padding-top: 12px;
 }
+
+/*=========== MAIN-HOME =============*/
+#main-home{
+    margin-top: 120px;
+}
