--- a/week_3/Pine City Zoo/CSS/Style.css
+++ b/week_3/Pine City Zoo/CSS/Style.css
@@ -74,7 +74,7 @@ padding-top: 15px;
     padding-top: none;
 }
 
-/*====== MAIN ==========*/
+/*========== MAIN ========== */
 #main{
     margin-top: 119px;
     background: url('../Images/map-blur.png');
@@ -83,4 +83,17 @@ padding-top: 15px;
 #content{
     padding-top: 1px;
     padding-bottom: 50px;
+}
+
+/*================= INFO BOX =========*/
+
+a.info-box{
+    text-decoration: none;
+    background: rgba(255, 255, 255, .8);
+    width: 90%;
+    height: 90px;
+    display: block;
+    margin: auto;
+    margin-top: 12px;
+    padding: 1px;
 }
