--- a/week_3/Pine City Zoo/CSS/Style.css
+++ b/week_3/Pine City Zoo/CSS/Style.css
@@ -140,7 +140,7 @@ a.info-box{
 
 /*============ INFO BOX FULL =======*/
 
-#info-boxfull{
+#info-box-full{
     background: rgba(255, 255, 255, .8);
     width: 90%;
     display: block;
