Going back to the original code, and fixing a typo

--- a/week_3/Pine City Zoo/CSS/Style.css
+++ b/week_3/Pine City Zoo/CSS/Style.css
@@ -71,7 +71,7 @@ padding-top: 15px;
     color: white;
     text-align: center;
     text-decoration: none;
-    padding-top: none;
+    padding-top: 0;;
 }
 
 /*========== MAIN ========== */
