--- a/week_3/Pine City Zoo/CSS/Style.css
+++ b/week_3/Pine City Zoo/CSS/Style.css
@@ -4,7 +4,7 @@ margin     : 0;
 font-family: Helvetica;
 }
 
-/*======== HEADER ========*/
+/*============== HEADER ==============*/
 
 #header{
 position: fixed;
@@ -23,7 +23,7 @@ height : 70%;
 padding-top: 15px;
 }
 
-/*============== TOP-TABS ==========*/
+/*============== TOP-TABS ==============*/
 
 #tabs-top{
     position: fixed;
@@ -46,12 +46,12 @@ padding-top: 15px;
     padding-top: 12px;
 }
 
-/*=========== MAIN-HOME =============*/
+/*============== MAIN-HOME ==============*/
 #main-home{
     margin-top: 120px;
 }
 
-/*=========BOTTOM-TABS ===============*/
+/*============== BOTTOM-TABS ==============*/
 #tabs-bottom{
     position: fixed;
     bottom:0;
@@ -74,7 +74,7 @@ padding-top: 15px;
     padding-top: 0;
 }
 
-/*========== MAIN ========== */
+/*============== MAIN ==============*/
 #main{
     margin-top: 119px;
     background: url('../Images/map-blur.png');
@@ -85,7 +85,7 @@ padding-top: 15px;
     padding-bottom: 50px;
 }
 
-/*================= INFO BOX =========*/
+/*============== INFO BOX ==============*/
 
 a.info-box{
     text-decoration: none;
@@ -138,7 +138,7 @@ a.info-box{
     height: 40px;
 }
 
-/*============ INFO BOX FULL =======*/
+/*============== INFO BOX FULL ==============*/
 
 #info-box-full{
     background: rgba(255, 255, 255, .8);
@@ -182,4 +182,33 @@ table{
 
 td{
     border-top: 1px solid #131313;
+}
+
+/*========= FORM==========*/
+
+input{
+    width: 1005;
+    height: 25px;
+    margin: 12px 0;
+    border: 1px solid #929292;
+}
+
+textarea{
+    width: 100%;
+    height: 65px;
+    margin: 12px 0;
+    border: 1px solid #929292
+}
+
+.button{
+    display: block;
+    width: 100%;
+    background-color: forestgreen;
+    text-decoration: none;
+    text-align: center;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    margin: 12px 0;
+    padding: 8px 0;
 }
