Fixing the typo in the input line

--- a/week_3/Pine City Zoo/CSS/Style.css
+++ b/week_3/Pine City Zoo/CSS/Style.css
@@ -184,7 +184,7 @@ td{
     border-top: 1px solid #131313;
 }
 
-/*========= FORM==========*/
+/*============== FORM ==============*/
 
 input{
     width: 1005;
