--- a/week_5/CSS/style.css
+++ b/week_5/CSS/style.css
@@ -1,7 +1,7 @@
 table{
     color: #fff;
     text-align: center;
-    border-collapse: : collapse;
+    border-collapse: collapse;
     font: normal 3em Arial, Helvetica, sans-serif;
 }
 
@@ -13,4 +13,25 @@ tr{
 td{
     width: 25vw;
     border: 1px solid #4e494d;
+}
+
+#inputBox{
+    background-color: #4e494d;
+    text-algin: right;
+    width: 100;
+    font-size: 2em;
+    color: #fff;
+    border: 0px;
+}
+
+.digitButton{
+    background-color: #807e80;
+}
+
+.operatorButton{
+    background-color: #ff9e06;
+}
+
+.ACButton{
+    background-color: #656165;
 }
