Fixing a spelling error and finishing the project

--- a/week_5/CSS/style.css
+++ b/week_5/CSS/style.css
@@ -17,7 +17,7 @@ td{
 
 #inputBox{
     background-color: #4e494d;
-    text-algin: right;
+    text-align: right;
     width: 100;
     font-size: 2em;
     color: #fff;
