Changing the background colour

--- a/week_6/ContactBook/CSS/style.css
+++ b/week_6/ContactBook/CSS/style.css
@@ -9,7 +9,7 @@
 /* Body Styling */
 body {
     padding: 20px;
-    background-color: #f4f6f9;
+    background-color: #0066ff;
     color: #333;
 }
 
