Adding a heading for the page

--- a/week_6/ContactBook/CSS/style.css
+++ b/week_6/ContactBook/CSS/style.css
@@ -9,7 +9,7 @@
 /* Body Styling */
 body {
     padding: 20px;
-    background-color: #09234a;
+    background-color: #c8ced7;
     color: #333;
 }
 
