--- a/week_6/ContactBook/CSS/style.css
+++ b/week_6/ContactBook/CSS/style.css
@@ -9,7 +9,7 @@
 /* Body Styling */
 body {
     padding: 20px;
-    background-color: #c698c3;
+    background-color: #ffffff;
     color: #333;
 }
 
